              NULL when can't get memory.  Calling programs thus crash on
              very large images.  Introduced in 10.51.
              
              pnmtopng: fix bug: with -alpha specifying a mask which contains
              no fully transparent area, output PNG is fully opaque.
              Introduced in 10.29.

              ppmcie: fix bug: fails with "X coordinate out of range" error.
              Introduced in 10.51.

              bmptopnm: Fail properly with BMP that indicates an illegal bits
              per pixel.

              Build: To find libpng, use the Pkgconfig database entry instead
              of libpng-config if it is available.

              Build: pnmtops: Instead of omitting pnmtops from the build when
              there is no libz, just omit ability to create flate-compressed
              output from pnmtops.

11.06.29 BJH  Release 10.55.00

              Add pamtosrf, srftopam.  Thanks Mike Frysinger
              (vapier@gentoo.org).

              pgmtexture: fix wrong sum variance result.  Wrong since the
              beginning.  Thanks Francois P. S. Luus <fpsluus@gmail.com>.

              pamrubber: fix crash.  Introduced in 10.54.

              libnetpbm: pm_system(): fix bug - program always takes
              Standard Input from invoker's Standard Input when you don't
              supply a Standard Output accepter.  Introduced in 10.40.

              ppmtobmp: fix bug: crash ("internal error") or bogus failure or
              incorrect output on image without palette (e.g. black and
              white).  Introduced in 10.54.

              pnmtops: fix floating point exception or bogus width/height
              too large error.  Introduced in 10.53.

              pnmcat: Fix garbage output when multiple input image are from
              Standard Input (now it just fails gracefully).

              Build: Use 'pkg-config' to find X libraries if possible (This